fix skip z-index

--- a/UDCT/RRAPP/css/styles.css
+++ b/UDCT/RRAPP/css/styles.css
@@ -81,7 +81,7 @@ figure {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 9999;
+  z-index: 9998;
 }
 
 #maincontent {
@@ -293,7 +293,7 @@ nav h1 a {
   right: 0px;
   top: 80px;
   width: 50vw;
-  z-index: 9999;
+  z-index: 9998;
 }
 
 .inside #map {
